Fixes header style broken on IE
* Fixes header icon no center on IE10 & IE11.
* Hide the header title in small width device to avoid header icon and title miss up.

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -54,30 +54,29 @@ header {
     color: white;
     width: 100%;
     height: 68px;
-    display: flex;
     flex-shrink: 0; /* Note 2 */
-    align-items: center;
     padding: 0 24px;
     font-family: Roboto-Medium, sans-serif;
     font-size: 20px;
     line-height: 24px;
+    text-align: center;
 
-    * {
-        flex: 1;
-        white-space: nowrap;
+    .header-title {
+        position: absolute;
+        left: 24px;
+        top: 22px;
     }
 
-    img {
+    .header-image {
+        width: 48px;
         height: 48px;
-        padding-left: 20px;
-        flex: 0 0 48px;
+        margin-top: 10px;
     }
 
     &::after {
         flex: 1;
         content: "";
     }
-
 }
 
 footer {
